# vu1-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.toml
.github/workflows/: publish.yml  python-package.yml  test.yml
src/vu1_monitor/: main.py
src/vu1_monitor/compression/: __init__.py  files.py
src/vu1_monitor/config/: __init__.py  settings.py
src/vu1_monitor/dials/: __init__.py  client.py  model.py  models.py
src/vu1_monitor/exceptions/: __init__.py  dials.py
src/vu1_monitor/files/: __init__.py  lock.py
src/vu1_monitor/handlers/: __init__.py  dials.py  process.py
src/vu1_monitor/logger/: __init__.py  logger.py
src/vu1_monitor/metrics/: __init__.py  gpu.py
src/vu1_monitor/models/: __init__.py  models.py
src/vu1_monitor/static/: static.tgz
tests/: conftest.py
tests/fixtures/: dials.json  image.json  values.json
tests/unit/: test_dials_client.py  test_main.py  test_metrics_gpu.py
