[tool.poetry]
name = "vu1-monitor"
version = "0.1.0"
description = "A CLI application for monitoring hardware with VU1-Dials"
authors = ["Christian Nickerson <christian_nickerson@hotmail.com>"]
license = "Apache Licence 2.0"
readme = "README.md"
repository = "https://github.com/christian-nickerson/vu1-monitor"
keywords = ["vu1", "vu1-dials", "monitoring"]
include = ["LICENSE"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]


packages = [{ include = "vu1_monitor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
httpx = "^0.27.2"
dynaconf = "^3.2.6"
psutil = "^6.0.0"
gputil = "^1.4.0"
setuptools = "^74.1.2"
pillow = "^10.4.0"
pyadl = "^0.1"

[tool.poetry.scripts]
vu1-monitor = "vu1_monitor.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
black = "^24.8.0"
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-httpx = "^0.30.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
types-psutil = "^6.0.0.20240901"
types-pillow = "^10.2.0.20240822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"embedding/src/proto/*" = ["B028", "F541"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = ["src/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov", "--verbose"]
norecursedirs = ["dist", "build"]
pythonpath = ["src/"]
